--- a/app/src/main/res/menu/menu_serverlist.xml
+++ b/app/src/main/res/menu/menu_serverlist.xml
@@ -8,6 +8,10 @@
         android:orderInCategory="100"
         android:title="@string/action_refresh_server" />
     <item
+        android:id="@+id/action_edit_server"
+        android:orderInCategory="100"
+        android:title="@string/action_edit_server" />
+    <item
     android:id="@+id/action_delete_server"
     android:orderInCategory="100"
     android:title="@string/action_delete_server" />
