--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,7 @@
         android:id="@+id/action_settings"
         android:onClick="onAddServerClick"
         android:orderInCategory="100"
-        android:title="@string/action_add_server" />
+        android:title="@string/action_add_server"
+        android:icon="@android:drawable/ic_input_add"
+        app:showAsAction="always" />
 </menu>
