--- a/app/src/main/res/menu/menu_server_detail.xml
+++ b/app/src/main/res/menu/menu_server_detail.xml
@@ -8,6 +8,6 @@
         android:orderInCategory="100"
         android:title="@string/action_refresh_server"
         android:onClick="onRefreshClick"
-        android:icon="@android:drawable/ic_menu_rotate"
-        app:showAsAction="always" />
+        android:icon="@android:drawable/stat_notify_sync"
+        app:showAsAction="ifRoom" />
 </menu>
