--- a/app/src/main/res/layout/activity_server_detail.xml
+++ b/app/src/main/res/layout/activity_server_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="rikka.l4d2util.ServerDetailActivity">
+    tools:context="rikka.srcdsutil.ServerDetailActivity">
 
     <TextView
         android:id="@+id/text_server_detail"
