--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="rikka.l4d2util.MainActivity"
+    tools:context="rikka.srcdsutil.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <ListView
