--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="rikka.l4d2util.MainActivity">
+    tools:context="rikka.srcdsutil.MainActivity">
     <item
         android:icon="@android:drawable/ic_menu_info_details"
         android:onClick="onShowAboutClick"
